# opensearchmcp

./: README.md  checks.sh  docker-compose.yml  litellm_config.yaml  main.py  opensearch_query.ipynb  pyproject.toml
docker/: Dockerfile
