[project]
name = "opensearchmcp"
version = "0.1.0"
description = "MCP project for AZ"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "opensearch-py==3.0.0",
    "pypdf",
    "transformers",
    "torch",
    "requests"
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]
